Add assetFetcher and handler - tests are WIP
