# api.yaml
@@ -52,25 +52,59 @@ paths:
       responses:
         "200":
           description: "Success."
+        "400":
+          description: "Invalid input"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
       x-transportd:
         backend: app
-  /process-vulnerabilities:
-    get:
-      description: Get assets scanned in the last hour and publish them onto an event stream.
-      responses:
-        "200":
-          description: "Success"
-      x-transportd:
-        backend: app
-        enabled:
-#          - "metrics"
-          - "accesslog"
-          - "requestvalidation"
-          - "responsevalidation"
-          - "lambda"
-        lambda:
-          arn: "process-vulnerabilities"
-          async: false
-          request: '{}'
-          success: '{"status": 200, "bodyPassthrough": true}'
-          error: '{"status": 500, "bodyPassthrough": true}'
+  /notification:
+      post:
+        description: Get scanned assets and vulnerabilities from last scan for given site and publish them onto an event stream.
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ScanNotification'
+        responses:
+          "202":
+            description: "Accepted"
+        x-transportd:
+          backend: app
+          enabled:
+  #          - "metrics"
+            - "accesslog"
+            - "requestvalidation"
+            - "lambda"
+          lambda:
+            arn: "notification"
+            async: true
+            request: '#! json .Request.Body !#'
+            success: '{"status": 202, "bodyPassthrough": true}'
+components:
+  schemas:
+    ScanNotification:
+      type: object
+      required:
+        - site_id
+      properties:
+        scan_id:
+          type: string
+          description: The Nexpose scan ID for the completed scan.
+        site_id:
+          type: string
+          description: The Nexpose site ID for the site that just got scanned.
+    Error:
+      type: object
+      properties:
+        errorMessage:
+          type: string
+        errorType:
+          type: string
+        stackTrace:
+          type: array
+          items:
+            type: string
